--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#ffffff</color>
+    <color name="colorPrimaryDark">#ababab</color>
+    <color name="colorAccent">#00a95a</color>
+
+    <color name="app_white">#ffffff</color>
+    <color name="app_black">#000000</color>
+    <color name="app_toast_bg">#88000000</color>
+    <color name="app_toast_text">@color/app_white</color>
 </resources>
